tests/signature-shadow.m31.ref
Constant A is declared.
Constant a is declared.
proj_x is defined.
Signature orig is declared.
⊢ {x = a} : orig
⊢ {} : {orig with x = a}
⊢ {} : {orig with x = a}
⊢ {x = a}.x : A
Signature copy is declared.
⊢ {x = a} : copy
⊢ {x = a} : orig
s_orig is defined.
s_copy is defined.
The command failed with error:
File "./signature-shadow.m31", line 26, characters 27-32: Typing error
  the expression {} should have type {orig with x = a} but has type
  {copy with x = a}
Constant B is declared.
Constant b is declared.
Signature prod is declared.
⊢ {x = a} : {prod with y = b}
Signature wrap is declared.
Constant exfalso is declared.
Operation inhab is declared.
⊢ {T = A, T' = B} : {wrap with T, v = exfalso T}
